--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ theme: jekyll-theme-minimal
 title: This is holylake
 description: [No purpose ;)]
 
-logo: /assets/img/logo.png
+logo: /assets/img/logo.png.jpg
