--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@
 theme: jekyll-theme-minimal
 
 title: This is holylake
-description: [No purpose ;)]
+description: [No purpose ;), just for fun]
 
 logo: /assets/img/logo.png.jpg
