--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 theme: jekyll-theme-minimal
 
-remote_theme: "mmistakes/minimal-mistakes"
+#ote_theme: "mmistakes/minimal-mistakes"
 title: This is holylake
 description: [No purpose ;), just for fun]
 
